[project]
name = "sparkformers"
version = "0.0.0"
description = "Distributed deep learning for Hugging Face Transformers on Spark"
readme = "README.md"
authors = [
    { name = "Daniel Cahall", email = "danielenricocahall@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9,<3.13"
dependencies = [
    "transformers<5.0.0",
    "pyspark<=4.0.0"
]



[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.run]
branch = true
source = ["elephas"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.1",
    "pytest-pep8>=1.0.6",
    "pytest-cov>=6.2.1",
    "pytest-spark>=0.8.0",
    "mock>=5.1.0",
    "scikit-learn>=1.6.1",
    "datasets>=2.20.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
  "/.*",
  "/tests",
    "/docs",
    "/examples",
    "README.md",
    "CONTRIBUTING.md"
]
